test/libsolidity/syntaxTests/storageLayoutSpecifier/constant_divided_by_its_negation.sol
uint constant N = 100;
contract C layout at N / ~N {}
// ----
// TypeError 3667: (48-50): Arithmetic error when computing constant value.
